# mcp-postgres

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  admin  admin.py  install  install.py  privhelper.py  pyproject.toml  run-tests  run_tests.py  update  update.py
memory/: MEMORY.md  bump-version-each-commit.md  default-endpoint.md  mcp-postgres-roadmap.md  never-commit-without-approval.md  no-crlf-lf-warnings.md  run-tests-with-venv.md  sync-memory-into-repo.md
packaging/: config.toml.template  mcp-postgres.service  sudoers
src/mcp_postgres/: __init__.py  capabilities.py  confedit.py  config.py  configmigrate.py  context.py  db.py  docs.py  environment.py  manager.py  privclient.py  selftest.py  server.py
src/mcp_postgres/oauth/: __init__.py  login.py  provider.py  store.py
src/mcp_postgres/tools/: __init__.py  admin.py  base.py  config_files.py  discovery.py  introspection.py  observability.py  prompts.py  query.py  schema.py
tests/prod/: conftest.py  test_capabilities.py  test_confedit.py  test_config_files_paths.py  test_config_schema.py  test_configmigrate.py  test_discovery.py  test_guidance.py  test_live_capabilities.py  test_live_db.py  test_live_environment.py  test_live_guidance.py  test_live_manager.py  test_live_observability.py  test_live_service.py  test_live_service_tools.py  test_live_tools.py  test_live_write_tools.py  test_oauth_provider.py  test_oauth_store.py  test_observability.py  test_privhelper_allowlist.py  test_query_tools.py  test_schema_introspection.py
